--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -17,16 +17,34 @@ body {
 
 .header button {
     float: right;
-    margin-top: 25px;
-    margin-right: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 15px;
+    margin-right: 25px;
+    font-size: 15px;
+    width: 100px;
+    height: 40px;
+    font-family: 'Helvetica Neue', sans-serif;
+    border : none;
+    box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: aqua;
+    color : blueviolet;
+    border-radius: 15px;
+}
+
+
+button:hover {
+    border : solid grey 1px;
+}
+
+button:active {
+    box-shadow: none;
+    border-radius : 0px;
 }
 
 .content {
     margin: auto ;
     width : 25%;
     box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 550px;
+    height: 560px;
 
 }
 
@@ -36,6 +54,31 @@ body {
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 15px;
     padding-bottom: 10px;
+}
+
+.content button {
+        float: right;
+        margin-top: 8px;
+        margin-right: 40px;
+        font-size: 15px;
+        width: 100px;
+        height: 30px;
+        font-family: 'Helvetica Neue', sans-serif;
+        border : none;
+        box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+        color : brown;
+        border-radius: 10px;
+}
+
+
+.content button:hover {
+    border : solid grey 1px;
+}
+
+.content button:active {
+    box-shadow: none;
+    border-radius : 0px;
 }
 
 input:focus {
@@ -101,11 +144,19 @@ input:focus .form-card{
     display: inline;
 }
 .footer {
-    position: relative;
+    position: fixed;
     bottom: 0;
-    background-color: aqua;
+    background-color: rgb(209, 209, 209);
     width:100%;
     height:60px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
+}
+
+.footer p {
+    margin-left: 10px;
+    font-family: serif;
+}
+.footer p span{
+    margin-left: 10px;
 }
